--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </title>
     <body>
         <h1>This is header</h1>
+        <h2>This is Second Header</h2>
         <p>This a paragraph</p>
     </body>
 </html>
