--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
         <h1>This is header</h1>
         <h2>This is Second Header</h2>
         <p>This a paragraph</p>
+        <p>This is a second paragraph</p>
+        <p>This is a second paragraph</p>
+
     </body>
 </html>
